# scDREAMER

./: .gitignore  .readthedocs.yaml  2109_Classifier.ipynb  LICENSE  README.md  model.py  pyproject.toml  requirements.txt  scDREAMER_Atlas_level_integration.ipynb  scDREAMER_Sup_Healthy_Heart.ipynb  scDREAMER_Sup_runs.ipynb  scDREAMER_runs.ipynb  setup.cfg  setup.py  utils.py
Environments/: bbknn.yml  harmony.yml  imap.yml  scDREAMER.yml
MISC/Environments/: insct.yml  liger.yml  scanorama.yml  scanvi.yml  scgen.yml  seurat.yml
MISC/Immune/: scDREAMER_tensorflow2_Immune_shuffled.ipynb  scDREAMER_tensorflow2_Immune_unshuffle.ipynb
MISC/scDREAMER/: model.py  utils.py
MISC/scDREAMER-semi-sup/: utils_new_semi.py
MISC/scDREAMER-sup/: model_scanvi_hum_mou.py
MISC/scDREAMER_pyTorch/: terminal.ipynb  (+3 more)
docs/: requirements.txt
notebooks/: scDREAMER_Immune.ipynb  scDREAMER_Lung.ipynb  scDREAMER_Pancreas.ipynb  scDREAMER_Retina.ipynb
scDREAMER/: __init__.py  model.py  scDREAMER_Lung.ipynb  scDREAMER_Pancreas.ipynb  scDREAMER_runs.ipynb  utils.py
scDREAMER-semi-sup/: model_scanvi_semisupervised.py
scDREAMER-sup/: model_scanvi.py  utils_new.py
scDREAMER_SELF_SUP/: scDREAMER_Immune_self_supervised.ipynb  scDREAMER_Lung_self_supervised.ipynb
scDREAMER_SUP/: model.py  scDREAMER_Immune.ipynb  scDREAMER_Immune_semi_supervised.ipynb  scDREAMER_Immune_supervised.ipynb  scDREAMER_Lung.ipynb  scDREAMER_Sup_runs.ipynb  utils.py
scDREAMER_pyTorch_semi_supervised/: metrics_calculation-SD.ipynb  requirements.txt  scDREAMER_model.py  scDREAMER_run.py  scDREAMER_run_immune_human.py  scDREAMER_train.py  terminal_immune_human.ipynb  test_notebook.ipynb  utils.py
(+92 files in other folders)
