[metadata]
name = scDREAMER
version = 0.0.0
author = ['Ajita Shree','Musale Krushna Pavan','Hamim Zafar']
author_email = hamim@iitk.ac.in
description = scDREAMER Python package
url = package url
project_urls =
    Bug Tracker = https://github.com/Zafar-Lab/scDREAMER/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = scDREAMER
python_requires = 3.6
